# incubator-retired-htrace

./: .gitignore  BUILDING.txt  CNAME  DISCLAIMER.txt  Dockerfile  LICENSE.txt  NOTICE.txt  README.md  README.txt  RETIRED.txt  index.html  params.json  pom.xml
htrace/: .gitignore  README  pom.xml
htrace-c/: BUILDING.txt  README.md  pom.xml  style.txt
htrace-c/src/: CMakeLists.txt
htrace-c/src/core/: conf.c  conf.h  htrace.h  htrace.hpp  htracer.c  htracer.h  scope.c  scope.h  span.c  span.h  span_id.c  span_id.h
htrace-c/src/receiver/: curl.c  curl.h  hrpc.c  hrpc.h  htraced.c  local_file.c  noop.c  receiver.c  receiver.h
htrace-c/src/sampler/: always.c  never.c  prob.c  sampler.c  sampler.h
htrace-c/src/test/: cmp_util-unit.c  conf-unit.c  htable-unit.c  htraced_rcv-unit.c  linkage-unit.c  local_file_rcv-unit.c  log-unit.c  mini_htraced-unit.c  mini_htraced.c  mini_htraced.h  process_id-unit.c  rand-unit.c  rtest.c  rtest.h  rtestpp.cc  sampler-unit.c  span-unit.c  span_id-unit.c  span_table.c  span_table.h  span_util-unit.c  span_util.c  span_util.h  string-unit.c  temp_dir-unit.c  temp_dir.c  temp_dir.h  test.c  test.h  test_config.h.cmake  time-unit.c  tracer_id-unit.c
htrace-c/src/util/: build.h.cmake  cmp.c  cmp.h  cmp_util.c  cmp_util.h  htable.c  htable.h  log.c  log.h  process_id.c  process_id.h  rand.h  rand_linux.c  rand_posix.c  string.c  string.h  terror.c  time.c  time.h  tracer_id.c  tracer_id.h
htrace-core/: pom.xml
htrace-core/src/go/: BUILDING.txt  format.sh  generate_version.sh  gobuild.sh
htrace-core/src/main/java/org/apache/htrace/: HTraceConfiguration.java  NullScope.java  Sampler.java  SamplerBuilder.java  SamplerFactory.java  Span.java  SpanId.java  SpanReceiver.java  SpanReceiverBuilder.java  SpanReceiverFactory.java  TimelineAnnotation.java  Trace.java  TraceInfo.java  TraceScope.java  (+2 more)
htrace-core/src/main/java/org/htrace/: HTraceConfiguration.java  NullScope.java  Sampler.java  Span.java  SpanReceiver.java  TimelineAnnotation.java  Trace.java  TraceInfo.java  TraceScope.java  TraceTree.java  Tracer.java
htrace-core/src/test/java/org/htrace/: TestCountSampler.java  TestHTrace.java  TestHTraceConfiguration.java  TestSampler.java  TraceCreator.java
htrace-core/src/web/: index.html
htrace-core/src/web/app/: app.js  mock.js  setup.js
htrace-core/src/web/app/models/: span.js
htrace-core/src/web/app/views/: search.js  span.js
htrace-core/src/web/app/views/details/: details.js
htrace-core/src/web/app/views/graph/: graph.js
htrace-core/src/web/app/views/search/: field.js  search.js
htrace-core/src/web/app/views/swimlane/: swimlane.js
htrace-core/src/web/lib/css/: main.css
htrace-core/src/web/lib/js/: backgrid-paginator-0.3.5.js  backgrid-paginator.min.js
htrace-core/src/web/nested/: nested.html
htrace-core4/: pom.xml
htrace-flume/: README.md  pom.xml
htrace-hbase/: README.md  pom.xml
htrace-hbase/src/main/protobuf/: Span.proto
htrace-hbase/src/main/webapps/htrace/: index.html  spans.html  spans.js  traces.html  traces.js
htrace-htraced/: BUILDING.txt  pom.xml
htrace-htraced/example/: htraced-conf.xml
htrace-htraced/go/: gobuild.sh  web
htrace-htraced/go/Godeps/: Godeps.json
htrace-htraced/go/src/htrace/client/: client.go  hclient.go
htrace-htraced/go/src/htrace/common/: log.go  log_test.go  process.go  process_test.go  rpc.go  semaphore.go  span.go  test_util.go
htrace-htraced/go/src/htrace/conf/: config.go  config_keys.go  config_test.go
htrace-htraced/go/src/htrace/htraced/: client_test.go  datastore.go  datastore_test.go  heartbeater.go  heartbeater_test.go  hrpc.go  htraced.go  loader.go  metrics.go  metrics_test.go  mini_htraced.go  reaper_test.go  rest.go
htrace-htraced/go/src/htrace/htracedTool/: cmd.go  file.go  file_test.go  graph.go  graph_test.go  queries.go  query_test.go
htrace-htraced/go/src/htrace/test/: random.go
htrace-htraced/src/go/: format.sh  gobuild.sh
htrace-htraced/src/go/Godeps/: Godeps.json
htrace-htraced/src/web/: index.html
htrace-htraced/src/web/app/: app.js  predicate.js  predicate_view.js  query_results.js  router.js  search_results.js  search_results_view.js  search_view.js  server_info.js  span.js  span_details_view.js  span_group_widget.js  span_widget.js  string.js  time_cursor.js  tree.js  triangle_button.js  widget_manager.js
htrace-htraced/src/web/app/models/: span.js
htrace-htraced/src/web/app/views/details/: details.js
htrace-htraced/src/web/app/views/search/: field.js
htrace-kudu/: pom.xml
htrace-kudu/src/main/protobuf/: Span.proto
htrace-kudu/src/test/resources/: log4j.properties
htrace-webapp/: README.md  pom.xml
htrace-webapp/src/main/web/: custom.css  index.html
htrace-webapp/src/main/web/app/: about_view.js  modal.js  predicate.js  query_results.js  search_results_view.js  search_view.js  span.js  span_widget.js  widget_manager.js
htrace-webapp/src/main/webapp/: index.html
htrace-webapp/src/main/webapp/WEB-INF/: web.xml
htrace-webapp/src/main/webapp/app/: partition_widget.js  predicate.js  router.js  search_result.js  search_results_view.js  search_view.js  server_configuration.js  server_debug_info.js  server_info_view.js  server_stats.js  server_version.js  span.js  span_group_widget.js  span_widget.js  string.js  time_cursor.js  triangle_button.js
htrace-zipkin/: README.md  pom.xml
htrace-zipkin/src/main/thrift/: zipkinCore.thrift
htrace-zipkin/src/test/java/org/htrace/: TestHTraceSpanToZipkinSpan.java
htrace-zipkin/src/test/resources/: log4j.properties
htrace/tools/: graphDrawer.py
site/: site.xml
src/main/assembly/: src.xml
src/main/java/org/cloudera/htrace/: HTraceConfiguration.java  Sampler.java  Span.java  SpanReceiver.java  SpanStruct.java  Trace.java  TraceInfo.java  TraceScope.java  TraceTree.java  Tracer.java
src/main/site/: site.xml
src/main/site/markdown/: building.md  configuration.md  developer_guide.md  index.md
src/test/java/org/cloudera/htrace/: PerformanceTest.java  TestCountSampler.java  TestHTrace.java  TestSampler.java  TraceCreator.java
tools/: README  graphDrawer.py
(+346 files in other folders)
